/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common.driver;

import "api/common/page.proto";
import "api/common/r.proto";
import "api/common/entity.proto";
import "driver_query.proto";
import "driver_query_page.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.common.driver";
option java_outer_classname = "DeviceProto";
option objc_class_prefix = "Driver";
option java_multiple_files = true;

/*
Api
服务接口，定义了驱动设备相关的RPC调用
*/
service DeviceApi {
  // 分页查询设备信息
  rpc SelectByPage (GrpcPageDeviceQuery) returns (GrpcRPageDeviceDTO);
  // 根据设备ID查询设备信息
  rpc SelectById (GrpcDeviceQuery) returns (GrpcRDeviceDTO);
}

/*
Device R Page
设备分页查询的响应结构体
*/
message GrpcRPageDeviceDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Data
  返回的分页设备数据
  */
  GrpcPageDeviceDTO data = 2;
}

/*
Device Page
设备分页数据结构体
*/
message GrpcPageDeviceDTO {
  /*
  Page
  分页信息，包含页码、页大小、总数等
  */
  GrpcPage page = 1;

  /*
  Data
  设备数据列表
  */
  repeated GrpcRDeviceAttachDTO data = 2;
}

/*
  Device
  单个设备查询的响应结构体
  */
message GrpcRDeviceDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Device Attach
  返回的设备附加信息
  */
  GrpcRDeviceAttachDTO data = 2;
}

/*
  Device Attach
  设备附加信息结构体，包含设备及其关联的配置信息
  */
message GrpcRDeviceAttachDTO {
  /*
  Device
  设备基本信息
  */
  GrpcDeviceDTO device = 1;

  /*
  Point ID 集合
  设备关联的点位ID列表
  */
  repeated int64 point_ids = 2;

  /*
  DriverAttributeConfig List
  驱动属性配置列表
  */
  repeated GrpcDriverAttributeConfigDTO driverConfigs = 3;

  /*
  PointAttributeConfig List
  点位属性配置列表
  */
  repeated GrpcPointAttributeConfigDTO pointConfigs = 4;
}